--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,6 @@ p, h1,h2,h3,h4, label{
 .border-red{
   border: 1px solid red;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
