--- a/src/app/components/pages/films/films.component.html
+++ b/src/app/components/pages/films/films.component.html
@@ -1,5 +1,37 @@
 <div class="films__page container">
-  <div class="content" *ngFor="let film of films">
-    <app-expansion-panel [film]="film" ></app-expansion-panel>
-  </div>
+  <table mat-table [dataSource]="resultFilms" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef> Título </th>
+      <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+    </ng-container>
+    <ng-container matColumnDef="director">
+      <th mat-header-cell *matHeaderCellDef> Diretor </th>
+      <td mat-cell *matCellDef="let element"> {{element.director}} </td>
+    </ng-container>
+    <ng-container matColumnDef="producer">
+      <th mat-header-cell *matHeaderCellDef> Produtor </th>
+      <td mat-cell *matCellDef="let element"> {{element.producer}} </td>
+    </ng-container>
+    <ng-container matColumnDef="release_date">
+      <th mat-header-cell *matHeaderCellDef> Lançamento </th>
+      <td mat-cell *matCellDef="let element"> {{formatarData(element.release_date)}} </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="colunas"></tr>
+    <tr mat-row *matRowDef="let row; columns: colunas;"></tr>
+  </table>
+  <table class="mat-elevation-z8">
+    <tr>
+      <th>Titulo</th>
+      <th>Diretor</th>
+      <th>Produtor</th>
+      <th>Lançamento</th>
+    </tr>
+    <tr *ngFor="let film of resultFilms">
+      <td>{{film.title}}</td>
+      <td>{{film.director}}</td>
+      <td>{{film.producer}}</td>
+      <td>{{formatarData(film.release_date)}}</td>
+    </tr>
+  </table>
 </div>
