--- a/src/app/components/pages/films/films.component.html
+++ b/src/app/components/pages/films/films.component.html
@@ -1,36 +1,46 @@
 <div class="films__page container">
-  <table mat-table [dataSource]="resultFilms" class="mat-elevation-z8">
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef> Título </th>
-      <td mat-cell *matCellDef="let element"> {{element.title}} </td>
-    </ng-container>
-    <ng-container matColumnDef="director">
-      <th mat-header-cell *matHeaderCellDef> Diretor </th>
-      <td mat-cell *matCellDef="let element"> {{element.director}} </td>
-    </ng-container>
-    <ng-container matColumnDef="producer">
-      <th mat-header-cell *matHeaderCellDef> Produtor </th>
-      <td mat-cell *matCellDef="let element"> {{element.producer}} </td>
-    </ng-container>
-    <ng-container matColumnDef="release_date">
-      <th mat-header-cell *matHeaderCellDef> Lançamento </th>
-      <td mat-cell *matCellDef="let element"> {{formatarData(element.release_date)}} </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="colunas"></tr>
-    <tr mat-row *matRowDef="let row; columns: colunas;"></tr>
-  </table>
-  <table class="mat-elevation-z8">
-    <tr>
-      <th>Titulo</th>
-      <th>Diretor</th>
-      <th>Produtor</th>
-      <th>Lançamento</th>
-    </tr>
-    <tr *ngFor="let film of resultFilms">
-      <td>{{film.title}}</td>
-      <td>{{film.director}}</td>
-      <td>{{film.producer}}</td>
-      <td>{{formatarData(film.release_date)}}</td>
-    </tr>
-  </table>
+  <mat-spinner *ngIf="showSpinner"></mat-spinner>
+  <div *ngIf="!showSpinner">
+    <form (submit)="filtrarPorTitulo()">
+      <mat-form-field>
+        <mat-label>Buscar por título</mat-label>
+        <input name="filterTitle" matInput [(ngModel)]="filterTitle">
+      </mat-form-field>
+      <button mat-raised-button color="primary">Buscar</button>
+    </form>
+    <table mat-table [dataSource]="resultFilms" class="mat-elevation-z8">
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef> Título </th>
+        <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+      </ng-container>
+      <ng-container matColumnDef="director">
+        <th mat-header-cell *matHeaderCellDef> Diretor </th>
+        <td mat-cell *matCellDef="let element"> {{element.director}} </td>
+      </ng-container>
+      <ng-container matColumnDef="producer">
+        <th mat-header-cell *matHeaderCellDef> Produtor </th>
+        <td mat-cell *matCellDef="let element"> {{element.producer}} </td>
+      </ng-container>
+      <ng-container matColumnDef="release_date">
+        <th mat-header-cell *matHeaderCellDef> Lançamento </th>
+        <td mat-cell *matCellDef="let element"> {{formatarData(element.release_date)}} </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="colunas"></tr>
+      <tr mat-row *matRowDef="let row; columns: colunas;"></tr>
+    </table>
+    <table class="mat-elevation-z8">
+      <tr>
+        <th>Titulo</th>
+        <th>Diretor</th>
+        <th>Produtor</th>
+        <th>Lançamento</th>
+      </tr>
+      <tr *ngFor="let film of resultFilms">
+        <td>{{film.title}}</td>
+        <td>{{film.director}}</td>
+        <td>{{film.producer}}</td>
+        <td>{{formatarData(film.release_date)}}</td>
+      </tr>
+    </table>
+  </div>
 </div>
