Criando tabela de naves, metodo get para buscar naves e exibi-los

--- a/src/app/components/pages/films/films.component.html
+++ b/src/app/components/pages/films/films.component.html
@@ -28,7 +28,7 @@
       <tr mat-header-row *matHeaderRowDef="colunas"></tr>
       <tr mat-row *matRowDef="let row; columns: colunas;"></tr>
     </table>
-    <table class="mat-elevation-z8">
+    <table >
       <tr>
         <th>Titulo</th>
         <th>Diretor</th>
