--- a/src/app/components/pages/starships/starships.component.html
+++ b/src/app/components/pages/starships/starships.component.html
@@ -1,3 +1,27 @@
-<section class="container">
-  <p>starships works!</p>
-</section>
+<div class="starships__page container">
+  <mat-spinner *ngIf="showSpinner"></mat-spinner>
+  <div *ngIf="!showSpinner">
+    <table mat-table [dataSource]="resultStarShips" class="mat-elevation-z8">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
+      <ng-container matColumnDef="model">
+        <th mat-header-cell *matHeaderCellDef>Modelo</th>
+        <td mat-cell *matCellDef="let element">{{ element.model }}</td>
+      </ng-container>
+      <ng-container matColumnDef="manufacturer">
+        <th mat-header-cell *matHeaderCellDef>Fabricante</th>
+        <td mat-cell *matCellDef="let element">{{ element.manufacturer }}</td>
+      </ng-container>
+      <ng-container matColumnDef="hyperdrive_rating">
+        <th mat-header-cell *matHeaderCellDef>Hyperdrive</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.hyperdrive_rating }}
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="colunas"></tr>
+      <tr mat-row *matRowDef="let row; columns: colunas"></tr>
+    </table>
+  </div>
+</div>
