Aplicando paginação no componente de nave

--- a/src/app/components/pages/starships/starships.component.html
+++ b/src/app/components/pages/starships/starships.component.html
@@ -23,5 +23,15 @@
       <tr mat-header-row *matHeaderRowDef="colunas"></tr>
       <tr mat-row *matRowDef="let row; columns: colunas"></tr>
     </table>
+    <mat-paginator
+      aria-label="Selecione a página"
+      [length]="totalStarships"
+      [pageSize]="10"
+      [pageIndex]="paginaAtual - 1"
+      (page)="changePagination($event)"
+      >
+
+</mat-paginator>
+
   </div>
 </div>
