Exibindo mais detalhes sobre a Nave

--- a/src/app/components/pages/starships/starships.component.html
+++ b/src/app/components/pages/starships/starships.component.html
@@ -21,7 +21,7 @@
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="colunas"></tr>
-      <tr mat-row *matRowDef="let row; columns: colunas"></tr>
+      <tr mat-row *matRowDef="let row; columns: colunas" (click)="clickedRow(row)"></tr>
     </table>
     <mat-paginator
       aria-label="Selecione a página"
@@ -33,5 +33,17 @@
 
 </mat-paginator>
 
+  </div>
+  <div class="details" *ngIf="detailsStarships">
+    <div *ngFor="let details of detailsStarships">
+      <p>Nome:
+        {{details.name}}</p>
+      <p>Valor:
+        {{details.cost_in_credits}}$</p>
+      <p>velocidade atmosférica máxima:
+          {{details.max_atmosphering_speed}}
+
+
+    </div>
   </div>
 </div>
