--- a/src/app/components/pages/films/films.component.html
+++ b/src/app/components/pages/films/films.component.html
@@ -1,5 +1,3 @@
 <div class="films__page container">
-  <div class="content" *ngFor="let film of films">
-    <app-expansion-panel [film]="film" ></app-expansion-panel>
-  </div>
+  <p>Films component.</p>
 </div>
