--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -4,12 +4,7 @@
     <ul class="navbar">
       <li><a [routerLink]="['']" class="link-item">Home</a></li>
       <li><a [routerLink]="['films']" class="link-item">Filmes</a></li>
-      <li><a [routerLink]="['search']" class="link-item">Buscar</a></li>
-      <!-- <li><a [routerLink]="['/peoples']" class="link-item">Pessoas</a></li>
-      <li><a [routerLink]="['/vehicles']" class="link-item">Veiculos</a></li>
-      <li><a [routerLink]="['/planets']" class="link-item">Planetas</a></li>
-      <li><a [routerLink]="['/species']" class="link-item">Especies</a></li>
-      <li><a [routerLink]="['/starships']" class="link-item">Starships</a></li> -->
+      <li><a [routerLink]="['starships']" class="link-item">Naves</a></li>
     </ul>
   </nav>
 </header>
